# mp-assembler

./: Cargo.toml
assets/: m3-2mm.stl  m3-nut.stl  m3-pan_head.stl  m3-washer.stl  m5-2mm.stl  train_base.stl
src/: dialog_gui.rs  gizmo.rs  grid.rs  gui.rs  inspector_gui.rs  interaction.rs  main.rs  parts.rs  selection.rs  storage.rs
