[package]
name = "mp-assembler"
version = "0.2.0"
authors = ["Tom <twitchyliquid64@ciphersink.net>"]
edition = "2018"

[dependencies]
bevy = "0.4" # { git = "https://github.com/bevyengine/bevy", branch = "master" }
bevy_4x_camera = "0.1"
bevy_egui = "0.2"
bevy_stl = "0.2"
bevy_mod_picking = "0.3"
genmesh = "0.6"
raqote = "0.7.14"

bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "master" }

structopt = "0.3"
directories = "2.0"
maker-panel = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
